2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/Warehouse_Work_Instruction__c.object-meta.xml
<CustomObject>
    <label>Warehouse Work Instruction</label>
    <nameField>
        <displayFormat>WWI{YY}{MM}{DD}-{00000}</displayFormat>
        <label>WWI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warehouse Work Instructions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>