2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Annex_A__c.field-meta.xml
<CustomField>
    <fullName>Annex_A__c</fullName>
    <label>Annex A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>