2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Annex_A_B_old__c.field-meta.xml
<CustomField>
    <fullName>Annex_A_B_old__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annex A/B (old)</label>
    <type>Checkbox</type>
</CustomField>