2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Arrival_Departure__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Departure__c</fullName>
    <label>Receive/Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Receive</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>