2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <label>Collector</label>
    <length>35</length>
    <type>Text</type>
</CustomField>