2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Collector_lookup__c.field-meta.xml
<CustomField>
    <fullName>Collector_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Collector_lookup field for WWI as per Matthew.</description>
    <label>Collector</label>
    <referenceTo>artApp__Collector__c</referenceTo>
    <relationshipLabel>Warehouse Work Instructions</relationshipLabel>
    <relationshipName>Warehouse_Work_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>