2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Company_Shipper__c.field-meta.xml
<CustomField>
    <fullName>Company_Shipper__c</fullName>
    <label>Company/Shipper</label>
    <type>TextArea</type>
</CustomField>