2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Crate_Dim__c.field-meta.xml
<CustomField>
    <fullName>Crate_Dim__c</fullName>
    <label>Dimensions (cm)</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>