2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSA</label>
    <type>Checkbox</type>
</CustomField>