2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Date_A__c.field-meta.xml
<CustomField>
    <fullName>Date_A__c</fullName>
    <label>Date of Arrival at WH</label>
    <type>Date</type>
</CustomField>