2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Date_of_Departure_from_WH__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Departure_from_WH__c</fullName>
    <label>Date of Departure from WH</label>
    <type>Date</type>
</CustomField>