2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/DocAtt_Documents_Attached__c.field-meta.xml
<CustomField>
    <fullName>DocAtt_Documents_Attached__c</fullName>
    <label>Attachments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Packing list</fullName>
            </value>
            <value>
                <fullName>Barcode labels</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>