2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/DocAtt_If_Others__c.field-meta.xml
<CustomField>
    <fullName>DocAtt_If_Others__c</fullName>
    <label>If Others (Documents Attached)</label>
    <length>45</length>
    <type>Text</type>
</CustomField>