2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/HP_Ext__c.field-meta.xml
<CustomField>
    <fullName>HP_Ext__c</fullName>
    <defaultValue>$User.Phone</defaultValue>
    <label>Contact No. (HT)</label>
    <type>Phone</type>
</CustomField>