2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Insurance_old__c.field-meta.xml
<CustomField>
    <fullName>Insurance_old__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance (old)</label>
    <type>Checkbox</type>
</CustomField>