2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Barcoding__c.field-meta.xml
<CustomField>
    <fullName>Pur_Barcoding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Barcoding 条码</label>
    <type>Checkbox</type>
</CustomField>