2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Condition_Check__c.field-meta.xml
<CustomField>
    <fullName>Pur_Condition_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Condition Check changed to Visual Check.</description>
    <label>Visual Check 验货</label>
    <type>Checkbox</type>
</CustomField>