2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Crating__c.field-meta.xml
<CustomField>
    <fullName>Pur_Crating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crating 装箱</label>
    <type>Checkbox</type>
</CustomField>