2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_CSA_Rack__c.field-meta.xml
<CustomField>
    <fullName>Pur_CSA_Rack__c</fullName>
    <label>Store in 储存在</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PSA</fullName>
            </value>
            <value>
                <fullName>Transit (7 days grace)</fullName>
            </value>
            <value>
                <fullName>CSA (Climate)</fullName>
            </value>
            <value>
                <fullName>CSA (Non-Climate)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>