2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Fabricationof_Carton_Jackets__c.field-meta.xml
<CustomField>
    <fullName>Pur_Fabricationof_Carton_Jackets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make Carton Jackets 造纸盒</label>
    <type>Checkbox</type>
</CustomField>