2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Non_Bonded__c.field-meta.xml
<CustomField>
    <fullName>Pur_Non_Bonded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Bonded</label>
    <type>Checkbox</type>
</CustomField>