2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Others__c.field-meta.xml
<CustomField>
    <fullName>Pur_Others__c</fullName>
    <label>Others</label>
    <type>TextArea</type>
</CustomField>