2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_PSA_Room__c.field-meta.xml
<CustomField>
    <fullName>Pur_PSA_Room__c</fullName>
    <label>Storage Room No. 库房号</label>
    <length>45</length>
    <type>Text</type>
</CustomField>