2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Repacking__c.field-meta.xml
<CustomField>
    <fullName>Pur_Repacking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repack 重装</label>
    <type>Checkbox</type>
</CustomField>