2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Retrieve__c.field-meta.xml
<CustomField>
    <fullName>Pur_Retrieve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrieve 取出</label>
    <type>Checkbox</type>
</CustomField>