2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Storage_Disposalof_Crate__c.field-meta.xml
<CustomField>
    <fullName>Pur_Storage_Disposalof_Crate__c</fullName>
    <label>Empty Crates to be 吉箱要</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stored 存</fullName>
            </value>
            <value>
                <fullName>DIsposed 弃</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>