2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Take_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Pur_Take_Measurement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Take Measurements 量度尺码</label>
    <type>Checkbox</type>
</CustomField>