2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Pur_Uncrating__c.field-meta.xml
<CustomField>
    <fullName>Pur_Uncrating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uncrate 拆箱</label>
    <type>Checkbox</type>
</CustomField>