2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Sales_Person_in_Charge__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_in_Charge__c</fullName>
    <label>Sales Person in Charge</label>
    <length>45</length>
    <type>Text</type>
</CustomField>