2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Specific_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Specific_Requirements__c</fullName>
    <label>Specific Requirements</label>
    <type>TextArea</type>
</CustomField>