2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/fields/Transfer_HK__c.field-meta.xml
<CustomField>
    <fullName>Transfer_HK__c</fullName>
    <description>Internal Transfer</description>
    <label>Transfer 轉倉</label>
    <type>TextArea</type>
</CustomField>