2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/recordTypes/WWICN.recordType-meta.xml
<RecordType>
    <fullName>WWICN</fullName>
    <active>true</active>
    <description>WWICN</description>
    <label>WWICN</label>
</RecordType>