2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Work_Instruction__c/recordTypes/WWISG.recordType-meta.xml
<RecordType>
    <fullName>WWISG</fullName>
    <active>true</active>
    <description>WWISG</description>
    <label>WWISG</label>
</RecordType>